# preflight-tool-set

./: .dockerignore  Dockerfile  README.md
.github/workflows/: release.yml
installer/: .gitignore
installer/linux/: README.md  build-installer.sh  install.sh  uninstall.sh
installer/macos/: README.md  build-installer.sh  install.sh
installer/windows/: README.md  build-installer.ps1  rbara.iss
rbara/: Cargo.toml
rbara/src/: cli.rs  main.rs  process.rs
rbara/src/tui/: app.rs  ascii_icon.rs  events.rs  mod.rs  quips.rs  ui.rs
rustybara/: Cargo.toml
rustybara/src/: error.rs  pipeline.rs
rustybara/src/color/: icc.rs
rustybara/src/pages/: boxes.rs
rustybara/src/stream/: color_ops.rs  mod.rs
