[package]
name = "rustybara"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "LGPL-3.0-only"
description = "Prepress-focused PDF manipulation library for graphic designers and print operators"
repository = "https://github.com/Addy-A/rustybara"
readme = "../README.md"
keywords = ["pdf", "prepress", "trim", "bleed", "rasterize"]
categories = ["multimedia::images"]
exclude = ["tests/fixtures/"]

[dependencies]
lopdf = "0.40.0"
pdfium-render = { version = "0.9.0", features = ["thread_safe"] }
image = { version = "0.25.10", features = ["jpeg", "tiff", "png", "webp"] }
webp = "0.3.1"
rayon = "1.11.0"

[features]
color = [] # stubbed, planned for color/icc module
gpu = []   # stubbed, planned for GPU renderer

[dev-dependencies]
# test-only deps here as needed